@@ -1,3 +1,8 @@
 2010-07-23 Nikolay Orlenko  <okolya@gmail.com>
 
-	* initial code generated with kickstarter
+	* first version
+
+2011-08-21 Nikolay Orlenko  <okolya@gmail.com>
+
+	* Add hide checkboes for description and addthis service
+
